--- a/app/package.json
+++ b/app/package.json
@@ -12,17 +12,20 @@
     "@expo/vector-icons": "^14.0.4",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
-    "expo": "~52.0.28",
-    "expo-status-bar": "~2.0.1",
-    "firebase": "^11.2.0",
-    "react": "18.3.1",
-    "react-native": "0.76.6",
+    "expo": "^53.0.8",
+    "expo-status-bar": "~2.2.3",
+    "firebase": "^11.9.1",
+    "react": "19.0.0",
+    "react-native": "0.79.2",
     "react-native-safe-area-context": "^5.1.0",
-    "react-native-screens": "^4.6.0"
+    "react-native-screens": "^4.6.0",
+    "react-dom": "19.0.0",
+    "react-native-web": "^0.20.0",
+    "@expo/metro-runtime": "~5.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@types/react": "~18.3.12",
+    "@types/react": "~19.0.10",
     "typescript": "^5.3.3"
   },
   "private": true
